--- a/public/locales/en-US.json
+++ b/public/locales/en-US.json
@@ -4,12 +4,17 @@
   "LOC": "Location",
   "UPTIME": "Uptime",
   "LOAD": "Load",
-  "NETWORK": "Network",
+  "NETWORK": "Network(B/s)",
+  "TRAFFIC": "Traffic(B)",
   "CPU": "CPU",
   "RAM": "RAM",
   "HDD": "HDD",
   "LOADING": "Data loading...",
   "WAIT": "Loading data from the server, please wait for a while...",
   "LAST_UPDATE": "Last updated: {updatedTime}",
-  "DAYS": "days"
+  "DAYS": "days",
+  "Second": "s",
+  "Minute": "m",
+  "Hour": "h",
+  "Day": "d"
 }
