--- a/public/locales/en-US.json
+++ b/public/locales/en-US.json
@@ -2,6 +2,7 @@
   "NAME": "Name",
   "TYPE": "Type",
   "LOC": "Location",
+  "PLATFORM": "Platform",
   "UPTIME": "Uptime",
   "LOAD": "Load",
   "NETWORK": "Network(B/s)",
